All stretch and base goals finished aside from one bug with the delete stretch goal. Updated the read-me

--- a/styles.css
+++ b/styles.css
@@ -132,3 +132,6 @@ footer#footer {
 .tooMuch {
     background-color: red;
 }
+.safeZone {
+    background-color: rgb(0, 0, 0);
+}
